ISSITES-5757 Fixed icon alignment and updated hover styles.

--- a/modules/apps/site-initializer/site-initializer-liferay-learn/src/main/resources/site-initializer/fragments/group/public-sites-navigation/fragments/navigation-menu-item/index.scss
+++ b/modules/apps/site-initializer/site-initializer-liferay-learn/src/main/resources/site-initializer/fragments/group/public-sites-navigation/fragments/navigation-menu-item/index.scss
@@ -2,21 +2,21 @@
 	border-radius: var(--border-radius-sm);
 
 	&:hover {
-		color: var(--color-action-primary-default);
 		background: var(--color-action-primary-hover-lighten);
+		color: var(--color-action-primary-default);
+
+		.arrow-hover-icon {
+			display: block;
+		}
+	}
+
+	.arrow-hover-icon {
+		display: none;
+		transform: rotate(-45deg);
 	}
 
 	.menu-item-icon {
-		height: 14px;
-		width: 14px;
-
-		svg,
-		img {
-			height: 100%;
-			max-width: 100%;
-		}
-	}
-	.menu-item-text {
-		color: var(--color-neutral-10);
+		height: 100%;
+		max-width: 22px;
 	}
 }
